quarkus/LookupService/target/kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
    app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
  labels:
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.kubernetes.io/name: quarkus-lookup-service
  name: quarkus-lookup-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0-SNAPSHOT
      app.kubernetes.io/name: quarkus-lookup-service
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
        app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
      labels:
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.kubernetes.io/name: quarkus-lookup-service
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
            - name: JAVA_OPTIONS
              value: ""
          image: vicgu/quarkus-lookup-service:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-lookup-service
          ports:
            - containerPort: 9982
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
    app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
  labels:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
  name: quarkus-lookup-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9982
  selector:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
