quarkus/LookupService/target/kubernetes/openshift.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
    app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
  labels:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-lookup-service
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
        app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
      labels:
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: quarkus-lookup-service
        app.kubernetes.io/version: 1.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: JAVA_OPTIONS
              value: ""
            - name: SMALLRYE_CONFIG_LOCATIONS
              value: /mnt/app-secret
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: vicgu/quarkus-lookup-service:1.0-SNAPSHOT
          imagePullPolicy: Always
          name: quarkus-lookup-service
          ports:
            - containerPort: 9982
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/app-secret
              name: app-secret
              readOnly: false
      volumes:
        - name: app-secret
          secret:
            optional: false
            secretName: ccm-secrets
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - quarkus-lookup-service
        from:
          kind: ImageStreamTag
          name: quarkus-lookup-service:1.0-SNAPSHOT
      type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
    app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
  labels:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-lookup-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9982
  selector:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: fcb69ad6e01c86133c9dfc22550cfa42d5d1a2ea
    app.quarkus.io/build-timestamp: 2023-06-28 - 18:05:07 +0000
  labels:
    app.kubernetes.io/name: quarkus-lookup-service
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: quarkus-lookup-service
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: quarkus-lookup-service
